2005-07-28 Ito Kazumitsu <kaz@maczuka.gcd.org>

	* test/regression/SecureRandomTest.java:
	Use kaffe's security provider explicitly.

2005-07-26 Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-07-14  Thomas Fitzsimmons  <fitzsim@redhat.com>

        * gnu/java/awt/peer/gtk/GtkChoicePeer.java (choicePostItemEvent):
        Rename to postChoiceItemEvent.
        * gnu/java/awt/peer/gtk/GtkComponentPeer.java (realize): New method.
        (setNativeEventMask): Likewise.
        * gnu/java/awt/peer/gtk/GtkGenericPeer.java (printCurrentThread): New method.
        * gnu/java/awt/peer/gtk/GtkWindowPeer.java (realize): New method.
        * native/jni/gtk-peer/gtkpeer.h: Move widget-specific macro,
        variable and function declarations into the widget-specific file.
        Add cp_gtk_ namespace prefix to external symbols.
        (cp_gtk_graphics2d_init_jni): New function.
        (cp_gtk_graphics_init_jni): Likewise.
        (cp_gtk_button_init_jni): Likewise.
        (cp_gtk_checkbox_init_jni): Likewise.
        (cp_gtk_choice_init_jni): Likewise.
        (cp_gtk_component_init_jni): Likewise.
        (cp_gtk_list_init_jni): Likewise.
        (cp_gtk_menuitem_init_jni): Likewise.
        (cp_gtk_scrollbar_init_jni): Likewise.
        (cp_gtk_textcomponent_init_jni): Likewise.
        (cp_gtk_window_init_jni): Likewise.
        (cp_gtk_component_connect_expose_signals): Likewise.
        (cp_gtk_component_connect_focus_signals): Likewise.
        (cp_gtk_component_connect_mouse_signals): Likewise.
        (cp_gtk_component_connect_signals): Likewise.
        (cp_gtk_textcomponent_connect_signals): Likewise.
        (cp_gtk_print_current_thread): Likewise.
        * native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkEvents.c: Remove
        file.  Move widget-specific functions into the widget-specific
        files.  Break main event handler into multiple widget-specific
        callbacks.